[gd_scene load_steps=10 format=2]

[ext_resource path="res://Zero_mod/Player/Weapons/D-Glaive.tres" type="Resource" id=1]
[ext_resource path="res://src/Effects/Remains Particle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Zero_mod/Levels/Inferno/Secret_Block.gd" type="Script" id=5]
[ext_resource path="res://Zero_mod/Objects/Pickups/WeaponCollect.tscn" type="PackedScene" id=8]
[ext_resource path="res://Zero_mod/Levels/Inferno/secret_wall.tres" type="SpriteFrames" id=9]

[sub_resource type="Curve" id=244]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=243]
curve = SubResource( 244 )

[sub_resource type="ParticlesMaterial" id=245]
resource_local_to_scene = true
resource_name = "remains_single"
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 243 )

[sub_resource type="RectangleShape2D" id=105]
extents = Vector2( 8, 40.25 )

[node name="Secret_Block" type="KinematicBody2D"]
position = Vector2( 1680, 1631 )
collision_mask = 0
script = ExtResource( 5 )

[node name="Remains" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 40 )
process_material = SubResource( 245 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 40 )
shape = SubResource( 105 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( -8, 40 )
shape = SubResource( 105 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -152, 1 )
z_index = 50
frames = ExtResource( 9 )
animation = "Locked"

[node name="D-Glaive" parent="." instance=ExtResource( 8 )]
position = Vector2( -208, 77 )
weapon = ExtResource( 1 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
